@@ -65,5 +65,11 @@ this repository contains the full copyright notices and license terms. -->
             <field name="action" ref="act_commission_from_relate"/>
         </record>
 
+        <record model="ir.ui.view" id="account_invoice_credit_start_view_form">
+            <field name="model">account.invoice.credit.start</field>
+            <field name="inherit" ref="account_invoice.credit_start_view_form"/>
+            <field name="name">account_invoice_credit_start_form</field>
+        </record>
+
     </data>
 </tryton>
