@@ -1,3 +1,4 @@
+* Add with agent option to credit invoice
 * Add employee on agent selection
 
 Version 5.6.0 - 2020-05-04
